hphp/test/zend/good/Zend/tests/function_arguments_001.php.expectf

Fatal error: Encountered unexpected token 'string'. in %s/function_arguments_001.php on line 2
